--- a/app/globals.css
+++ b/app/globals.css
@@ -25,3 +25,217 @@ body {
     text-wrap: balance;
   }
 }
+
+/* navagation */
+.routes{
+  display: flex;
+  flex-direction: row;
+  justify-content: end;
+list-style: none;
+align-items: center;
+font-size: 22px;
+font-weight: 500;
+height: 100px;
+margin-left: 80px;
+margin-right: 80px;
+
+}
+.route-parent{
+background-color: #CFA6A61C;
+
+;
+}
+.route{
+  padding-inline: 15px;
+  font-family: Arial;
+text-align: left;
+color:#000000
+ 
+}
+/* hero-section */
+
+.hero-section{
+  background-color: #CFA6A61C;
+}
+.container{
+max-width: 1030px;
+margin-left: auto;
+margin-right: auto;
+
+}
+.hero-main{
+  display: flex;
+  height: 450px;
+  align-items: center;
+justify-content: space-between;
+
+}
+.text{
+  width: 60%;
+  display: flex;
+  flex-direction: column;
+  gap:20px;
+}
+.heading{
+  font-size: 48px;
+  font-weight: 900;
+}
+.paragrah{
+  font-size: 16px;
+  font-weight: 400;
+}
+.button{
+  background-color: #F98585;
+  border:none;
+  padding:10px 20px;
+  color:#FFF;
+  font-size: 18px;
+  font-weight:500 ;
+  line-height:26px ;
+  width: fit-content;
+  cursor: pointer;
+}
+/* recent post */
+.recent-post{
+background-color: #f4e2e2;
+}
+.heading-1{
+  display: flex;
+  justify-content: space-between;
+  margin: 20px;
+  align-items: center;
+}
+.post-heading{
+  font-size: 26px ;
+  font-weight:700 ;
+}
+.recent{
+  font-size: 20px;
+  font-weight: 500;
+  color: #000000;
+}
+.post-pattern{
+  font-size: 18px ;
+  font-weight:400 ;
+  
+}
+.post-para{
+  font-size: 16px ;
+  font-weight:400 ;
+}
+.box1{
+  background-color: #FFF;
+  height: 350px;
+  padding: 40px;
+  display: flex;
+  justify-content: space-evenly;
+  flex-direction: column;
+}
+.main-box{
+  display: flex;
+  gap: 40px;
+}
+.recent-post  {
+  height: 500px;
+  display: flex;
+  flex-direction:column ;
+  justify-content: center;
+  gap:25px;
+}
+.view-all{
+  font-size: 22px;
+  font-weight: 500;
+  color:#F98585 ;
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+}
+
+
+/* featured work */
+
+.main-featured{
+  margin: 30px;
+ 
+
+}
+.work{
+  font-size: 25px;
+  font-weight: 500;
+  color: #000000;
+  padding-bottom: 40px;
+
+}
+.image-main{
+  display: flex;
+}
+.fd-heading{
+font-size: 30px;
+font-weight: 700;
+}
+.year{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 18px;
+  font-weight: 700;
+  background-color: #F98585;
+  border-radius: 10px;
+  color: #FFFFFF;
+  height: 24px;
+  width: 60px;
+
+
+}
+.para1{
+  display: flex;
+  gap: 30px;
+  padding: 20px;
+  
+}
+.d-heading{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 20px;
+  font-weight: 400;
+  color: #0000009E;
+
+
+}
+.fd-para{
+font-size: 16px;
+font-weight: 400;
+}
+.Dashboards{
+  gap: 120px;
+  display: flex;
+  justify-content: space-evenly;
+  flex-direction: column; 
+  background-color: #CFA6A61C;
+  padding-top: 100px;
+  padding-bottom: 200px;
+  
+}
+/* footer */
+
+.footer-main{
+  display: flex;
+  flex-direction: column;
+  background-color: #CFA6A61C;
+
+  height: 250px;
+  justify-content: center;
+  gap: 15px;
+}
+.icons{
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+}
+.f-para{
+  font-size: 22px;
+  font-weight: 500;
+  color: #000000;
+  text-align: center;
+}
